# gupiao

./: .gitignore  README.md  jiaoyi_chengben.json  lianghua_peizhi.json  pyproject.toml  项目设计与实现.md
agent/: .env.example  cli.py  mcp_server.py
agent/src/: __init__.py  preflight.py
agent/src/agent/: __init__.py  context.py  frontmatter.py  loop.py  memory.py  tools.py  trace.py
agent/src/ashare/: __init__.py  bankuai_yuce.py  chengben_huadian.py  dangu_yuce.py  gupiao_yanjiu.py  jiaoyi_zhixing.py  moxing_pinggu.py  riping_cangku.py  riping_yinzi.py  shuju_yuan.py  shuju_zhiliang.py
agent/src/core/: __init__.py  state.py
agent/src/duihua/: __init__.py  huihua.py
agent/src/memory/: __init__.py  persistent.py
agent/src/providers/: __init__.py  chat.py  llm.py  llm_providers.json  openai_codex.py
agent/src/tools/: __init__.py  bankuai_xuangu_tool.py  gupiao_analysis_cache.py  gupiao_fenxi_tool.py  gupiao_yuce_tool.py  path_utils.py
agent/tests/: conftest.py  test_bankuai_yuce_execution.py  test_duanxian_yanjiu.py  test_duihua_agent.py  test_duihua_cli.py  test_duihua_huihua.py  test_gupiao_two_stage_tools.py  test_gupiao_yanjiu_boundaries.py  test_llm.py  test_loop_helpers.py  test_mcp_server.py  test_openai_codex.py  test_path_safety.py  test_persistent_memory.py  test_reasoning_content.py  test_riping_cangku.py  test_shuju_yuan_rules.py  test_tool_registry_security.py
